every url gets a new shortened url even if there is a record for that original url in the database

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "echarts": "^5.5.1"
+        "echarts": "^5.5.1",
+        "vuex": "^4.0.2"
     }
 }
