--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "echarts": "^5.5.1",
         "pinia": "^2.2.0",
+        "vue-router": "^4.4.0",
         "vuex": "^4.0.2"
     }
 }
