dist folder created again

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "echarts": "^5.5.1",
         "pinia": "^2.2.0",
         "vue-router": "^4.4.0",
-        "vuex": "^4.0.2"
+        "vuex": "^4.0.2",
+        "ziggy-js": "^2.3.0"
     }
 }
